Fixed printing onto document
Rewrote the entire content to focus on being able to add the content onto the document and removing the customability function to ensure functioning prototype

--- a/appsscript.json
+++ b/appsscript.json
@@ -16,9 +16,20 @@
     "https://www.googleapis.com/auth/drive.file",
     "https://www.googleapis.com/auth/drive.readonly"
   ],
-  "webapp": {
-    "executeAs": "USER_DEPLOYING",
-    "access": "ANYONE"
+  "addOns": {
+    "common": {
+      "name": "IMRAD Helper",
+      "useLocaleFromApp": true,
+      "homepageTrigger": {
+        "enabled": true,
+        "runFunction": "onOpen"
+      }
+    },
+    "docs": {
+      "homepageTrigger": {
+        "enabled": true,
+        "runFunction": "onOpen"
+      }
+    }
   }
-} 
-
+}
